--- a/themes/sparkling-child/style.css
+++ b/themes/sparkling-child/style.css
@@ -55,7 +55,6 @@ div.countdown {
 .vortex-container-vote-comment {
 	display: inline-block;
 	float: right;
-	margin-left: 5px;
 }
 
 table.profile-fields .label {
@@ -105,13 +104,19 @@ li.menu-item a {
 
 /* More compact comments */
 .comment .comment-body {
-	margin-top: 1em;
-	padding: 20px;
-    padding-left: 88px;
+	margin-top: 0.5em;
+	padding: 10px;
+    padding-left: 78px;
+	min-height: 90px;
 }
 .comment-list li.comment > div img.avatar {
-    left: 20px;
-    top: 20px;
+    left: 15px;
+    top: 15px;
+}
+.comment-body .btn {
+	background-color: white;
+	border: none;
+	color: #828384;
 }
 
 /* LOGO adjustments */
